# BrightUI

./: README.md  pyproject.toml  themes.css
.github/workflows/: ci.yml  codeql.yml  release.yml
tests/: test_basic.py
